# firecracker

./: Cargo.toml
api_server/src/: lib.rs
devices/src/: lib.rs
devices/src/virtio/: block.rs  mmio.rs  net.rs
dumbo/src/tcp/: connection.rs
encryption/src/: lib.rs
memory_model/src/: guest_memory.rs  mmap.rs
rate_limiter/src/: lib.rs
src/: main.rs
src/a/: Cargo.toml  build.rs
src/a/src/: lib.rs
src/a2/: Cargo.toml  build.rs
src/a2/src/: lib.rs
src/arch/: Cargo.toml
src/cpuid/: Cargo.toml
src/devices/: Cargo.toml
src/devices/src/legacy/: mod.rs  serial2.rs
src/devices/src/virtio/: block.rs  device.rs  mmio.rs  mod.rs  persist.rs  queue.rs  queue2.rs
src/devices/src/virtio/block/: defs.rs  device.rs  errors.rs  mod.rs  request.rs
src/devices/src/virtio/net/: device.rs
src/devices/src/virtio/vsock/: device.rs  packet.rs
src/firecracker/: Cargo.toml
src/firecracker/src/: api_server_adapter.rs  main.rs
src/kvm_bindings_versionize/: Cargo.toml
src/kvm_bindings_versionize/src/: lib.rs
src/kvm_bindings_versionize/src/x86/: convert.rs  fam_wrappers.rs  mod.rs
src/kvm_bindings_versionize/src/x86/bindings/: mod.rs  tests.rs
src/mmap_fork/: Cargo.toml
src/mmap_fork/src/: lib.rs  mmap.rs
src/snapshot/: Cargo.toml  build.rs
src/snapshot/benches/: basic.rs
src/snapshot/src/: crc.rs  lib.rs  primitives.rs  version_map.rs
src/snapshot_derive/src/: helpers.rs  lib.rs
src/snapshot_derive/src/descriptors/: enum_desc.rs  struct_desc.rs  union_desc.rs
src/snapshot_derive/src/fields/: enum_variant.rs  struct_field.rs  union_field.rs
src/verde/: Cargo.toml
src/verde/src/: indirect_de.rs  lib.rs
src/vm-memory/src/: mmap.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  controller.rs  error.rs  lib.rs
src/vmm/src/device_manager/: mmio.rs
src/vmm/src/vstate/: vm.rs
src/vmm/src/vstate/vcpu/: x86_64.rs
tests/framework/: resources.py
tests/integration_tests/performance/: test_drive.py
vmm/src/: controller.rs  error.rs  lib.rs  vstate.rs
vmm/src/device_manager/: mmio.rs
vmm/src/vmm_config/: logger.rs
