[package]
name = "a2"
version = "0.1.0"
authors = ["Alexandru Agache <alexandruag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = ">=1.4.0"

snapshot = { path = "../snapshot" }
snapshot_derive = { path = "../snapshot_derive" }
