[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
kvm-bindings = ">=0.3.0"
kvm-ioctls = ">=0.5.0"
libc = ">=0.2.39"
vm-memory = { version = ">=0.2.2", features = ["backend-mmap"] }

arch_gen = { path = "../arch_gen" }
utils = { path = "../utils" }

[dev-dependencies]
device_tree = ">=1.1.0"
