[package]
name = "kvm-bindings-versionize"
version = "0.3.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]
description = "Rust FFI bindings to KVM generated using bindgen."
repository = "https://github.com/rust-vmm/kvm-bindings"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0"

[dependencies]
vmm-sys-util = { version = ">=0.2.0" }

versionize = { version = ">=0.1.1" }
versionize_derive = { version = ">=0.1.1" }
